Register native routines.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1467 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,3 +1,5 @@
+useDynLib("tm", .registration = TRUE)
+
 importFrom("NLP", "content", "content<-", "meta", "meta<-", "words",
            "as.Token_Tokenizer", "is.Span_Tokenizer", "Token_Tokenizer",
            "TaggedTextDocument")
@@ -260,5 +262,3 @@ S3method("nDocs", "DocumentTermMatrix")
 S3method("nDocs", "TermDocumentMatrix")
 S3method("nTerms", "DocumentTermMatrix")
 S3method("nTerms", "TermDocumentMatrix")
-
-useDynLib(tm, copyCorpus)
