Add Boost tokenizer
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1487 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -16,6 +16,7 @@ importFrom("slam", "as.simple_triplet_matrix", "col_sums",
 export("as.DocumentTermMatrix",
        "as.TermDocumentMatrix",
        "as.VCorpus",
+       "Boost_tokenizer",
        "content_transformer",
        "Corpus",
        "DataframeSource",
