Move xml2 from Suggests to Imports.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1499 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -8,10 +8,15 @@ importFrom("graphics", "abline", "plot")
 importFrom("parallel", "parLapply")
 importFrom("stats", "coef", "cor", "lm", "setNames")
 importFrom("utils", "download.file", "getS3method", "unzip")
-
 importFrom("slam", "as.simple_triplet_matrix", "col_sums",
            "crossapply_simple_triplet_matrix", "read_stm_MC", "rollup",
            "row_sums", "simple_triplet_matrix")
+importFrom("xml2",
+           "read_xml",
+           "xml_contents",
+           "xml_find_all",
+           "xml_missing",
+           "xml_text")
 
 export("as.DocumentTermMatrix",
        "as.TermDocumentMatrix",
