--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,9 +8,9 @@ Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
 Depends: R (>= 3.2.0), NLP (>= 0.1-6.2)
-Imports: Rcpp, parallel, slam (>= 0.1-37), stats, tools, utils, graphics
+Imports: Rcpp, parallel, slam (>= 0.1-37), stats, tools, utils, graphics, xml2
 LinkingTo: BH, Rcpp
-Suggests: antiword, filehash, methods, pdftools, Rcampdf, Rgraphviz, Rpoppler, SnowballC, testthat, tm.lexicon.GeneralInquirer, xml2
+Suggests: antiword, filehash, methods, pdftools, Rcampdf, Rgraphviz, Rpoppler, SnowballC, testthat, tm.lexicon.GeneralInquirer
 SystemRequirements: C++11
 Description: A framework for text mining applications within R.
 License: GPL-3
