--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.7-2
 Date: 2017-10-28
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
-             person("Kurt", "Hornik", role = "aut"),
+             person("Kurt", "Hornik", role = "aut",
+                    comment = c(ORCID = "0000-0003-4198-9911")),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
 Depends: R (>= 3.2.0), NLP (>= 0.1-6.2)
