--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Text Mining Package
 Version: 0.7-3
 Date: 2017-12-06
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
-                    email = "feinerer@logic.at"),
+                    email = "feinerer@logic.at",
+                    comment = c(ORCID = "0000-0001-7656-8338")),
              person("Kurt", "Hornik", role = "aut",
                     comment = c(ORCID = "0000-0003-4198-9911")),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
