--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.7-8
-Date: 2020-11-17
+Version: 0.7-9
+Date: 2022-10-18
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at",
                     comment = c(ORCID = "0000-0001-7656-8338")),
@@ -16,5 +16,5 @@ Suggests: antiword, filehash, methods, pdftools, Rcampdf, Rgraphviz, Rpoppler, S
 SystemRequirements: C++11
 Description: A framework for text mining applications within R.
 License: GPL-3
-URL: http://tm.r-forge.r-project.org/
+URL: https://tm.r-forge.r-project.org/
 Additional_repositories: https://datacube.wu.ac.at
