--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at",
                     comment = c(ORCID = "0000-0001-7656-8338")),
              person("Kurt", "Hornik", role = "aut",
+     		    email = "Kurt.Hornik@R-project.org",
                     comment = c(ORCID = "0000-0003-4198-9911")),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
